Added html templates for index(search form), flights(for displaying available flights according to the search value), booking (booking form). some styles

--- a/src/main/resources/templates/booking.html
+++ b/src/main/resources/templates/booking.html
@@ -29,7 +29,7 @@
 
     <div class="row form-row">
         <div class="card flight-card">
-            <form class="booking-form">
+            <form method="post" action="/booking/confirm" class="booking-form">
                 <label for="bookingName">To</label>
                 <input type="text" class="form-control" id="bookingName" placeholder="Full Name...">
 
