--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,16 +21,16 @@
                 <div class="card-body">
                     <form method="get" action="/search">
                         <div class="form-group">
-                            <label for="fromDestination">From</label>
-                            <input type="text" class="form-control" id="fromDestination" placeholder="From...">
+                            <label for="fromLocation">From</label>
+                            <input type="text" class="form-control" id="fromLocation" placeholder="From...">
                         </div>
                             <div class="form-group">
-                            <label for="toDestination">To</label>
-                            <input type="text" class="form-control" id="toDestination" placeholder="To...">
+                            <label for="toLocation">To</label>
+                            <input type="text" class="form-control" id="toLocation" placeholder="To...">
                         </div>
                         <div class="form-group">
-                            <label class="datepicker" for="dateofbirth">Pick a date</label>
-                            <input type="date" name="dateofbirth" id="dateofbirth">
+                            <label class="datepicker" for="flightTime">Pick a date</label>
+                            <input type="date" name="time-of-flight" id="flightTime">
                         </div>
 
                         <input class="btn btn-outline-dark" type="submit" value="Submit">
