--- a/src/main/resources/templates/addschedule.html
+++ b/src/main/resources/templates/addschedule.html
@@ -9,7 +9,7 @@
 <body>
 
 <nav class="navbar navbar-light bg-secondary">
-    <a class="navbar-brand text-white-50" href="#">
+    <a class="navbar-brand text-white-50" href="/">
         Airline Service
     </a>
 </nav>
@@ -19,7 +19,7 @@
     <div class="row form-row">
         <div class="card">
             <div class="card-body">
-                <form method="post" action="/addschedule">
+                <form method="post" action="/addnewschedule">
                     <div class="form-group">
                         <label for="fromAirportCode">Departure Airport</label>
                         <input type="text" class="form-control" id="fromAirportCode" placeholder="From Airport Code...">
