--- a/src/main/resources/templates/flights.html
+++ b/src/main/resources/templates/flights.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Airline Service</title>
@@ -9,27 +9,23 @@
 <body>
 
 <nav class="navbar navbar-light bg-secondary">
-    <a class="navbar-brand text-white-50" href="#">
+    <a class="navbar-brand text-white-50" href="/">
         Airline Service
     </a>
 </nav>
 
 
+
+
 <div class="container">
     <div class="row form-row">
-        <div class="card flight-card border-dark">
+        <div class="card flight-card border-dark" th:each="schedule : ${schedules}">
             <a href="#" class="card-body">
-                Flight 1
-            </a>
-        </div>
-        <div class="card flight-card  border-dark">
-            <a href="#" class="card-body">
-                Flight 2
-            </a>
-        </div>
-        <div class="card flight-card  border-dark">
-            <a href="#" class="card-body">
-                Flight 3
+                <span th:text="${schedule.getFromAirportCode()}" />
+                <span th:text="${schedule.getToAirportCode()}" />
+                <span th:text="${schedule.getDeptTime()}" />
+                <span th:text="${schedule.getArrivalTime()}" />
+                <span th:text="${schedule.getRemCapacity()}" />
             </a>
         </div>
     </div>
