--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -19,28 +19,7 @@
     <div class="row form-row">
         <div class="card">
             <div class="card-body">
-                <form method="post" action="/addnewschedule">
-                    <div class="form-group">
-                        <label for="fromAirportCode">Departure Airport</label>
-                        <input type="text" class="form-control" id="fromAirportCode" placeholder="From Airport Code...">
-                    </div>
-                    <div class="form-group">
-                        <label for="toAirportCode">Arrival Airport</label>
-                        <input type="text" class="form-control" id="toAirportCode" placeholder="To Airport Code...">
-                    </div>
-                    <div class="form-group">
-                        <label class="datepicker" for="departureTime">Departure Time</label>
-                        <input type="date" name="time-of-flight" id="departureTime">
-                    </div>
-
-                    <div class="form-group">
-                        <label class="datepicker" for="arrivalTime">Arrival Time</label>
-                        <input type="date" name="time-of-flight" id="arrivalTime">
-                    </div>
-
-                    <input class="btn btn-outline-dark" type="submit" value="Submit">
-
-                </form>
+                <a href="/airport-admin">Add Airport</a>
             </div>
         </div>
     </div>
