--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -25,6 +25,16 @@
     </div>
 </div>
 
+<div class="container">
+    <div class="row form-row">
+        <div class="card">
+            <div class="card-body">
+                <a href="/schedule-admin">Add Schedule</a>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 
 
