addLocation and addFlight completed

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -23,6 +23,20 @@
             </div>
         </div>
     </div>
+    <div class="row form-row">
+        <div class="card">
+            <div class="card-body">
+                <a href="/flight-admin">Add Flight</a>
+            </div>
+        </div>
+    </div>
+    <div class="row form-row">
+        <div class="card">
+            <div class="card-body">
+                <a href="/location-admin">Add Location</a>
+            </div>
+        </div>
+    </div>
 </div>
 
 
