--- a/src/main/resources/templates/schedule-admin.html
+++ b/src/main/resources/templates/schedule-admin.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Airline Service</title>
@@ -33,8 +33,11 @@
                         <input type="datetime-local" class="form-control" name="arrivalTime" placeholder="Arrival Time...">
                     </div>
                     <div class="form-group">
-                        <input type="text" class="form-control" name="remCapacity" placeholder="Remaining Capacity...">
+                        <select name="remCapacity" th:each="flight : ${flights}">
+                            <option th:text="${flight.name}" th:value="${flight.capacity}"></option>
+                        </select>
                     </div>
+
 
                     <input class="btn btn-outline-dark" type="submit" value="Add Schedule">
 
