--- a/src/main/resources/templates/flights.html
+++ b/src/main/resources/templates/flights.html
@@ -20,7 +20,7 @@
 <div class="container">
     <div class="row form-row">
         <div class="card flight-card border-dark" th:each="schedule : ${schedules}">
-            <a th:href="@{/book/{id}(id=${schedule.getId()})}" class="card-body">
+            <a th:href="@{/booking/{id}(id=${schedule.getId()})}" class="card-body">
                 <span th:text="${schedule.getFromAirportCode()}" />
                 <span th:text="${schedule.getToAirportCode()}" />
                 <span th:text="${schedule.getDeptTime()}" />
