Ctrl Advice and exception handler + numberOfPeople

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -33,6 +33,13 @@
                             <input type="date" id="flightTime" name="flightTime">
                         </div>
 
+
+                        <div class="form-group">
+                            <label for="numberOfPeople">How many passengers are you booking for?</label>
+                            <input type="number" min="1" class="form-control" id="numberOfPeople"  name="numberOfPeople">
+                        </div>
+
+
                         <input class="btn btn-outline-dark" type="submit" value="Submit">
 
                     </form>
