Corrected html form in booking-with-return.html

--- a/src/main/resources/templates/booking-with-return.html
+++ b/src/main/resources/templates/booking-with-return.html
@@ -22,7 +22,7 @@
 
     <div class="row form-row">
         <div class="card flight-card">
-            <form method="post" th:action="@{/booking-return/confirm}" class="booking-form">
+            <form method="post" th:action="@{/booking/booking-return/confirm}" class="booking-form">
 
                 <div class="card flight-card border-dark">
                     <span th:text="${toSchedule.getFromAirportCode()}" />
