--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -26,7 +26,21 @@
     <div class="row form-row">
         <div class="card">
             <div class="card-body">
-                <a href="/flight-admin">Add Flight</a>
+                <a href="/flight-admin">Manage Flights</a>
+            </div>
+        </div>
+    </div>
+    <div class="row form-row">
+        <div class="card">
+            <div class="card-body">
+                <a href="/viewReservations">View Reservations</a>
+            </div>
+        </div>
+    </div>
+    <div class="row form-row">
+        <div class="card">
+            <div class="card-body">
+                <a href="/viewLocations">View Locations</a>
             </div>
         </div>
     </div>
