--- a/src/main/resources/templates/flights.html
+++ b/src/main/resources/templates/flights.html
@@ -18,6 +18,16 @@
 
 
 <div class="container">
+    <div class="w-100 mt-2 bg-secondary">
+        <h3 class="ml-1" th:text="${search.searchFromInput} + ' - ' + ${search.searchToInput}"></h3>
+
+        <div class="row w-75 mx-auto">
+            <p th:if="${search.numberOfPeople < 2}" th:text="${search.numberOfPeople} + ' person | '"></p>
+            <p th:if="${search.numberOfPeople >= 2}" th:text="${search.numberOfPeople} + ' people | '"></p>
+            <p th:text="' ' + ${search.flightTime}"></p>
+        </div>
+    </div>
+
     <div class="row form-row" th:if="${bookingError != null && !bookingError.isEmpty()}">
         <span id="error-message" th:text="${bookingError}"></span>
     </div>
@@ -26,14 +36,17 @@
             No available flight found for search criteria. Click <a href="/">here</a> to search again
         </span>
     </div>
+
     <div class="row form-row"  th:if="${!schedules.isEmpty()}">
         <div class="card flight-card border-dark" th:each="schedule : ${schedules}">
             <a th:href="@{/booking/{id}(id=${schedule.getId()})}" class="card-body">
-                <span th:text="${schedule.fromAirportCode}" />
-                <span th:text="${schedule.toAirportCode}" />
-                <span th:text="${schedule.deptTime}" />
-                <span th:text="${schedule.arrivalTime}" />
-                <span th:text="${schedule.remCapacity}" />
+
+                Departure time: <span th:text="${schedule.deptTime.hour} + ':' + ${schedule.deptTime.minute}" />
+                Arrival time: <span th:text="${schedule.arrivalTime.hour} + ':' + ${schedule.arrivalTime.minute}" />
+
+                <p th:each="airport : ${airports}" th:if="${schedule.toAirportCode == airport.code}" th:text="${airport.name} + ' (' + ${airport.code} + ')'"></p>
+                <p th:each="airport : ${airports}" th:if="${schedule.fromAirportCode == airport.code}" th:text="${airport.name} + ' (' + ${airport.code} + ')'"></p>
+
             </a>
 
         </div>
