--- a/src/main/resources/templates/flights.html
+++ b/src/main/resources/templates/flights.html
@@ -19,7 +19,8 @@
 
 <div class="container">
     <div class="w-100 mt-2 bg-secondary">
-        <h3 class="ml-1" th:text="${search.searchFromInput} + ' - ' + ${search.searchToInput}"></h3>
+        <h3 class="ml-1" th:if="${!search.returnFlight}" th:text="${search.searchFromInput} + ' - ' + ${search.searchToInput}"></h3>
+        <h3 class="ml-1" th:if="${search.returnFlight}" th:text="${search.searchFromInput} +' - '+ ${search.searchToInput} +' - '+ ${search.searchFromInput}"></h3>
 
         <div class="row w-75 mx-auto">
             <p th:if="${search.numberOfPeople < 2}" th:text="${search.numberOfPeople} + ' person | '"></p>
@@ -31,15 +32,21 @@
     <div class="row form-row" th:if="${bookingError != null && !bookingError.isEmpty()}">
         <span id="error-message" th:text="${bookingError}"></span>
     </div>
-    <div class="row form-row" th:if="${schedules.isEmpty()}">
-        <span id="empty-schedule">
+    <div class="row form-row" th:if="${!search.returnFlight}">
+        <span th:if="${schedules.isEmpty()}" id="empty-schedule">
             No available flight found for search criteria. Click <a href="/">here</a> to search again
         </span>
     </div>
 
-    <div class="row form-row"  th:if="${!schedules.isEmpty()}">
+    <div class="row form-row" th:if="${search.returnFlight}">
+        <span th:if="${toschedules.isEmpty()} OR ${returnschedules.isEmpty()}">
+            No available flight found for search criteria. Click <a href="/">here</a> to search again
+        </span>
+    </div>
+
+    <div class="row form-row"  th:if="${!search.returnFlight}">
         <div class="card flight-card border-dark" th:each="schedule : ${schedules}">
-            <a th:href="@{/booking/{id}(id=${schedule.getId()})}" class="card-body">
+            <a th:if="${!search.returnFlight}" th:href="@{/booking/{id}(id=${schedule.getId()})}" class="card-body">
 
                 Departure time: <span th:text="${schedule.deptTime.hour} + ':' + ${schedule.deptTime.minute}" />
                 Arrival time: <span th:text="${schedule.arrivalTime.hour} + ':' + ${schedule.arrivalTime.minute}" />
@@ -49,7 +56,30 @@
 
             </a>
 
+
+
         </div>
+    </div>
+
+    <div th:if="${search.returnFlight}" th:each="toschedule : ${toschedules}">
+        <a th:each="returnschedule : ${returnschedules}" th:href="@{/booking/{toid}/{returnid} (toid=${toschedule.getId()}, returnid=${returnschedule.getId()})}" class="card flight-card border-dark">
+            <div class="card-body">
+                <div>
+                    <span th:text="${toschedule.getFromAirportCode()}" />
+                    <span th:text="${toschedule.getToAirportCode()}" />
+                    <span th:text="${toschedule.getDeptTime()}" />
+                    <span th:text="${toschedule.getArrivalTime()}" />
+                    <span th:text="${toschedule.getRemCapacity()}" />
+                </div>
+                <div>
+                    <span th:text="${returnschedule.getFromAirportCode()}" />
+                    <span th:text="${returnschedule.getToAirportCode()}" />
+                    <span th:text="${returnschedule.getDeptTime()}" />
+                    <span th:text="${returnschedule.getArrivalTime()}" />
+                    <span th:text="${returnschedule.getRemCapacity()}" />
+                </div>
+            </div>
+        </a>
     </div>
 </div>
 
