--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -37,14 +37,15 @@
             <div class="card">
                 <div class="card-body">
 
-                    <div class="form-group radio-group">
 
-                        One-way<input id="onewayradio" type="radio" name="onewayreturn" value="oneway" checked>
-
-                        Return<input id="returnradio" type="radio" name="onewayreturn" value="return">
-                    </div>
                     <form id="searchflights" method="get" action="/search">
 
+                        <div class="form-group radio-group">
+
+                            One-way<input id="onewayradio" type="radio" name="returnFlight" checked value=false>
+
+                            Return<input id="returnradio" type="radio" name="returnFlight" value=true>
+                        </div>
 
                         <div class="form-group">
                             <label for="fromLocation">From</label>
