--- a/src/main/resources/templates/flight-admin.html
+++ b/src/main/resources/templates/flight-admin.html
@@ -48,9 +48,36 @@
                         <td><span th:text="${flight.name}" /></td>
                         <td><span th:text="${flight.capacity}" /></td>
                         <td>
-                            <a th:href="@{/delete-flight/(id=${flight.id})}"> Delete </a>
+                            <a th:href="@{/delete-flight/(id=${flight.id})}">Delete</a>
                         </td>
-                        <td><a th:href="@{/edit-flight/{id}(id=${flight.id})}"> Edit </a></td>
+                        <td>
+                            <button id="flightModalButton" type="button" class="btn btn-primary" data-toggle="modal"  data-target="#exampleModal" th:attr="data-object-name=${flight.name}, data-object-capacity=${flight.capacity}">Edit</button>
+                            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                            <h4 class="modal-title" id="exampleModalLabel"></h4>
+                                        </div>
+                                        <div class="modal-body">
+                                            <form method="post" action="/admin/manage/edit/flight">
+                                                <div class="form-group">
+                                                    <label for="name" class="control-label">Flight Name: </label>
+                                                    <input type="text" class="form-control" id="name" name="name">
+                                                </div>
+                                                <div class="form-group">
+                                                    <label for="capacity" class="control-label">Capacity: </label>
+                                                    <input type="number" class="form-control" id="capacity" name="capacity">
+                                                </div>
+
+                                                <input type="submit" class="btn btn-primary">Submit</input>
+                                            </form>
+                                        </div>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </td>
                     </tr>
                     </tbody>
                     </p>
@@ -85,14 +112,9 @@
 
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script type="text/javascript" src="/js/custom.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
 
-
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-</body>
-</html>
