--- a/src/main/resources/templates/flight-admin.html
+++ b/src/main/resources/templates/flight-admin.html
@@ -39,6 +39,7 @@
                     <tr>
                         <th scope="col">Flight Name</th>
                         <th scope="col">Flight Capacity</th>
+                        <th scope="col" colspan="3">Airport Location_ID</th>
                     </tr>
                     </thead>
                     <tbody>
